# AD-Org-Sync

./: .gitignore  AD-Org-Sync.spec  CONTRIBUTING.md  README.md  SECURITY.md  WeCom-AD-Sync.spec  ad_sync.py  build_release.bat  config.example.ini  install_web_env.bat  install_web_service.ps1  install_web_startup_task.bat  ldap_compat.py  local_db.py  manage_web_service.ps1  pyproject.toml  remove_web_startup_task.bat  requests_compat.py  requirements-build.txt  requirements-deploy.txt  requirements-desktop.txt  requirements-test.txt  requirements.txt  run_web_background.bat  sip.py  start_web.bat  sync_common.py  sync_config.py  sync_entry.py  sync_logging.py  sync_reports.py  sync_runtime.py  sync_state.py  uninstall_web_service.ps1  upgrade_web_service.ps1  wechat_bot.py  wecom_client.py  wecom_sync_ad_ldaps.py  wecom_sync_ui.py
.github/workflows/: ci.yml  release.yml
docs/: PRD.md  deployment-windows-service.md
docs/adr/: ADR-001-department-group-identity.md  ADR-002-local-state-store-sqlite.md  ADR-003-local-app-settings-and-naming-policy.md  ADR-004-recursive-group-hierarchy.md  ADR-005-protected-groups-and-exclusion-policy.md  ADR-006-sync-execution-and-dry-run.md  ADR-007-default-database-sqlite.md
docs/api/: external-integrations-v1.md
docs/architecture/: bounded-context-entrypoints.md
docs/design/: ui-system.md
docs/guides/: admin-v1-operations-guide.md
docs/plan/: architecture-optimization-completion-plan.md  full-feature-execution-roadmap.md  prd-engineering-remediation.md  sqlite-deployment-and-operations-standard.md  sqlite-schema-and-implementation-plan.md  sspr-bounded-context-execution-plan.md  technical-optimization-roadmap.md  ui-experience-redesign-execution-plan.md  ui-experience-redesign-prd.md
docs/runbooks/: v1-go-live-checklist.md
legacy/code/: wecom_sync_ad.py
legacy/docs/: README_EXE.txt  STATUS_SUMMARY.txt  打包完成说明.md
legacy/scripts/: run_as_admin.bat  setup_venv.bat  创建简单图标.py  启动同步工具.bat  安装LDAPS依赖.bat
sync_app/: __init__.py  __main__.py  cli.py
sync_app/cli/: __init__.py  __main__.py  common.py  main.py  parser.py
sync_app/clients/: __init__.py  dingtalk.py  wechat_bot.py  wecom.py
sync_app/core/: __init__.py  common.py  config.py  conflict_recommendations.py  models.py  (+5 more)
tests/: test_architecture_boundaries.py  test_cli_config.py  test_cli_conflicts.py  test_cli_deploy.py  test_cli_web.py  test_config_release.py  test_config_store.py  test_conflict_decision.py  test_data_quality_center.py  test_desktop_services.py  test_dingtalk_client.py  test_external_integrations.py  test_job_diff.py  test_lifecycle_workbench.py  test_rule_governance_metadata.py  test_runtime_apply_phase.py  test_runtime_connectors.py  test_runtime_dry_run.py  test_source_providers.py  test_sspr_module.py  test_sspr_oauth.py  test_structure_guards.py  test_sync_dispatch.py  test_sync_state.py  test_target_providers.py  test_typed_settings.py  test_v1_smoke_path.py  test_web_app_helpers.py  test_web_authz.py  test_web_browser_regression.py  test_web_dashboard_state.py  test_web_i18n.py  test_web_mappings_page.py  test_web_readiness.py  test_web_runtime.py  test_web_sspr.py  test_web_storage.py  test_web_template_conventions.py
(+175 files in other folders)
