[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wecom-ad-sync"
version = "2.0.0"
description = "Synchronize WeCom departments and users into Active Directory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" }
]
keywords = ["wecom", "active-directory", "ldap", "ldaps", "sync", "windows"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "PyQt5==5.15.9",
  "qtawesome>=1.4.0",
  "schedule>=1.2.0",
  "ldap3>=2.9.1",
  "requests>=2.28.0",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0.0", "Pillow>=10.0.0"]
test = ["httpx>=0.27.0", "trio>=0.25.0"]

[project.scripts]
wecom-ad-sync = "sync_app.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sync_app*"]

[tool.setuptools.package-data]
"sync_app.web" = ["templates/*.html"]
