[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-org-sync"
version = "2.0.0"
description = "Synchronize enterprise directory sources into Active Directory."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Open Source Contributors" }
]
keywords = ["active-directory", "ldap", "ldaps", "sync", "windows", "identity"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: System Administrators",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "ldap3>=2.9.1",
  "requests>=2.28.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
]
desktop = [
  "PyQt5==5.15.9",
  "qtawesome>=1.4.0",
  "schedule>=1.2.0",
]
test = [
  "httpx>=0.27.0",
  "playwright>=1.52.0",
  "trio>=0.25.0",
]
build = [
  "build>=1.2.2",
  "pyinstaller>=6.0.0",
  "Pillow>=10.0.0",
]
deploy = [
  "pywin32>=311; platform_system == 'Windows'",
]

[project.scripts]
ad-org-sync = "sync_app.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sync_app*"]

[tool.setuptools.package-data]
"sync_app.web" = ["templates/*.html", "templates/components/*.html", "static/*"]
